# MLwatcher

./: .gitignore  README.md  STUDY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_stream.py  sample.csv  seasonal.csv  seasonal_shift.csv  tclab_live.py
src/mlwatcher/: __init__.py  __main__.py  alerts.py  dashboard.py  detectors.py  history.py  sources.py  transforms.py  watcher.py
tests/: test_mlwatcher.py
