[project]
name = "mlwatcher"
version = "0.1.0"
description = "Online anomaly & change detection for univariate streams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
]

[project.optional-dependencies]
dashboard = [
    "matplotlib>=3.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlwatcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
